Utilize TimerCheck.io for simulating washing state of individual machines

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/chdefrene/washtec-mock-api#readme",
   "devDependencies": {
+    "@types/luxon": "^1.27.0",
+    "@types/node-fetch": "^2.5.10",
     "@vercel/node": "^1.11.1"
   },
   "dependencies": {
